--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{May 18, 2017}
+  \date{May 19, 2017}
 
 
 \begin{document}
@@ -249,14 +249,19 @@ America intensive care units (ICU). However, physicians are reluctant to
 use mupirocin, an antibiotic, so investigators are swapping it with
 iodophor.
 
-\begin{longtable}[]{@{}llll@{}}
+\begin{longtable}[]{@{}lllll@{}}
+\caption{Abbreviations of variables used to randomize}\tabularnewline
 \toprule
-Primary import & Secondary import & Tetiary import & Quaternary
-import\tabularnewline
+Primary & Secondary & Tetiary & Quaternary & Quinary\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+Primary & Secondary & Tetiary & Quaternary & Quinary\tabularnewline
 \midrule
 \endhead
-Pt Days & Median LOS & Medicaid\tabularnewline
-S auer Rate & Comorbidity Score & TALI WHAT ELSE??\tabularnewline
+Pt Days & Median LOS & Medicaid & DC SNF & Onc\_BMT\_Trp\tabularnewline
+S auer Rate & Comorbidity Score & PCR Blood & Surgery &
+BMT\_Trp\tabularnewline
 MRSA Rate &\tabularnewline
 All Blood &\tabularnewline
 Mup-R &\tabularnewline
@@ -269,22 +274,26 @@ CHG Adherence &\tabularnewline
 Prior to randomization baseline data was collected for 20 months on the
 137 hospitals. With this data, investigators met to prioritize baseline
 variables into several categories: primary, secondary, tertiary,
-quaternary, and not relevant to randomization. For this trial, the
-investigators decided that average monthly volume of patients with
-attributable time, average monthly attributable days, Staphylococcus
-aureus ICU-attributable cultures per 1,000 days, MRSA ICU-attributable
-cultures per 1,000 days, all pathogen ICU-attributable bacteremia
-cultures per 1,000 days, regional mupirocin resistance estimate, percent
-of admissions with MRSA diagnosis within a year, percent of mupirocin
-use admission to day 5, survey Chlorhexidine Glucominate were all of
-primary importance. Of secondary importance were median ICU length of
-stay, and mean elixhauser total score. Of tertiary importance were the
-percentage of ICU medicaid patients, and Polymerase chain reaction
-clinical specimen status. Lastly, percent admissions to skilled nursing
-facility (SNF), and if the ICU has specialty units for burn, trauma,
-etc. More information is avaliable in appendix 1. To ease understanding,
-our initial discussion will involve 3 variables: Patient days,
-Staphylococcus auer rate, and MRSA rate.
+quaternary, quinary, and not relevant to randomization. For this trial,
+the investigators decided that average monthly attributable days,
+Staphylococcus aureus Intensive Care Unit (ICU)-attributable cultures
+per 1,000 days, MRSA ICU-attributable cultures per 1,000 days, all
+pathogen ICU-attributable bacteremia cultures per 1,000 days, regional
+mupirocin resistance estimate, percent of admissions with MRSA diagnosis
+within a year, percent of mupirocin use admission to day 5, survey
+Chlorhexidine Glucominate were all of primary importance. Of secondary
+importance were median ICU length of stay, and mean elixhauser total
+score. Of tertiary importance were the percentage of ICU medicaid
+patients, and whether or not a facility uses Polymerase chain reactions
+to identify MRSA in blood. Next, percent admissions to skilled nursing
+facility (SNF), and the percent of admissions with Center for Disease
+Control and Prevention surveillance surgery. Lastly, if the ICU has
+specialty units for oncology, bone marrow transplant, or transplant
+units, and if the ICU has bone marrow transplant or transplant units.
+More information on each variable is avaliable in appendix 1 and their
+abbreviations, in the same order, can be found in table 1. To ease
+understanding, our initial discussion will involve the first 3 variables
+above: Patient days, Staphylococcus aureus rate, and MRSA rate.
 
 \begin{center}\includegraphics{Bins_files/figure-latex/IntroGraph-1} \end{center}
 
@@ -357,11 +366,6 @@ A more formal explanation of the variables here, in table format, to be
 checked with Susan.
 
 \begin{longtable}[]{@{}ll@{}}
-\caption{Abbreviations of variables used to randomize}\tabularnewline
-\toprule
-Variable & Description\tabularnewline
-\midrule
-\endfirsthead
 \toprule
 Variable & Description\tabularnewline
 \midrule
@@ -377,8 +381,16 @@ CHG Adherence &\tabularnewline
 Median LOS &\tabularnewline
 Medicaid &\tabularnewline
 Comorbidity Score &\tabularnewline
+Medicaid &\tabularnewline
+PCR Blood &\tabularnewline
+DC SNF &\tabularnewline
+Surgery &\tabularnewline
+Onc\_BMT\_Trp &\tabularnewline
+BMT\_Trp &\tabularnewline
 \bottomrule
 \end{longtable}
+
+Table 2: Thorough description of baseline variables used in this paper.
 
 \bibliography{bibliography.bib}
 
