Still in progress

--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -83,13 +83,6 @@
 }
 
 
-@online{3Bears, 
-  url     = {https://en.wikipedia.org/wiki/Goldilocks_and_the_Three_Bears}, 
-  urldate = {2017-05-18}, 
-}
-
-
-
 @online{Shiny, 
   author  = {RStudio}, 
   title   = {Shiny by RStudio}, 
@@ -272,6 +265,12 @@
   publisher={Wiley}
 }
 
+@book{3Bears,
+  title={The Old Nursery Stories and Rhymes ... Illustrated by John Hassall},
+  author={NURSERY STORIES. and HASSALL, John,},
+  year={1904},
+  publisher={Blackie \& Son, London}
+}
 
 @book{murray1998design,
   title={Design and Analysis of Group-randomized Trials},
@@ -563,7 +562,6 @@
   year={2001},
   publisher={Wiley Online Library}
 }
-
 
 @article{zeger1986longitudinal,
   title={Longitudinal data analysis for discrete and continuous outcomes},
