--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{May 19, 2017}
+  \date{June 17, 2017}
 
 
 \begin{document}
@@ -124,7 +124,18 @@ effects among cluster members who do not receive treatment
 allocation of identifiable groups is necessary''
 \citep{murray2004design}.
 
-DO I NEED TO SAY SOMETHING ABOUT MATCHING HERE?? PROBABLY SO??
+KEN I PUT THIS BEFORE B/C I'D LIKE TO TAKE THE READER FROM CONFUSION
+INTO A SOLUTION, NOT TO THIS. I DON'T KNOW WHAT YOU THINK?
+
+One challenge in CRTs is their limited sample size. Most CRTs have less
+than 30 independent units to randomise, though each unit may have
+thousands of dependent individuals \citep{balzer2012match}. In IRTs,
+investigators expect randomisation to balance confounders across each
+arm of the trial, but the reduced size of CRTs reduces this. Grouping
+similar units together, then randomizing, is one solution to this.
+Scholars debate the sizes of this groups, in particular matching
+involves grouping 2 units together, and stratifying, many more than 2
+\citep{PMVsStrat}. This article discusses matching.
 
 Many authors debate matching in CRTs
 \citep{balzer2012match, CRTrials2009, gatsonis2017methods, diehr1995breaking, murray1998design, imai2009essential, PMVsStrat, donner2007merits, klar1997merits, donner2000design, martin1993effect}.
@@ -142,13 +153,12 @@ the chance of the intervention groups being well-balanced''
 or large sample, is ``equivalent to discarding a considerable fraction
 of one's data'' \citep{imai2009essential}. However, in one trial
 ``matching actually led to a loss in statistical efficiency''
-\citep[\citet{donner2000design}]{manun1994influence}.
+\citep[\citet{donner2000design}]{manun1994influence}. Despite all this
+debate few authors discuss methodologies to support the matching process
+\citep{raab2001balance}.
 
-Despite all this debate few authors discuss methodologies to support the
-matching process \citep{raab2001balance}. An alternative to matching
-suggests balancing criterion based on conditioned means of covariates
-\citep{raab2001balance}. Our article is an extension of methods
-introduced in Chapter 4 of Methods in Comparative Effectiveness Research
+Our article is an extension of methods introduced in Chapter 4 of
+Methods in Comparative Effectiveness Research
 \citep{gatsonis2017methods}. We suggest a method suitable for \(a\)
 \(priori\) matching using baseline data. In section 2 we outline our
 method, section 3 applies it to the SWAPOUT dataset, and section 4 is a
@@ -157,12 +167,12 @@ brief discussion.
 \subsection{Methods }\label{methods}
 
 To approach this complex topic of balancing randomization in CRTs we
-suggest a new approach. Our approach involves weighting variables of
-import, matching units using these weights, and randomizing many times
-to obtain a distribution of possibilities when official randomization
+suggest a new approach. Our approach involves controlling the strength
+of the matching on variables of import, and randomizing many times to
+obtain a distribution of possibilities when official randomization
 occurs. Investigators assess these distributions to determine if
-possible randomizations are sufficiently balanced, if not, weighting is
-adjusted and the process begins again. The details follow.
+possible randomizations are sufficiently balanced, if not, the strength
+criteria is adjusted and the process begins again. The details follow.
 
 The initial step involves prioritizing variables \((1, 2,..., m)\) from
 units \((1, 2, ..., n)\) to be randomized. We have
@@ -171,51 +181,38 @@ units \((1, 2, ..., n)\) to be randomized. We have
  \overline{V_1} & = & (v_{11}, v_{12},..., v_{1n})\\
  \overline{V_2} & = & (v_{21}, v_{22},..., v_{2n})\\
  \vdots & = & \vdots\\    
- \overline{V_m} & = & (v_{m1}, v_{m2},..., v_{mn}).\\
+ \overline{V_m} & = & (v_{m1}, v_{m2},..., v_{mn})\\
  \end{eqnarray*}
 
-In addition, we use \(\overline{w} = (w_{1}, w_{2},..., w_{m})\) to
-weight and standardize
-\((\overline{V_1}, \overline{V_2}, ..., \overline{V_m}).\) We have
+where \(v_{ij}\) is the \(i^{th}\) variable from unit \(j\): each
+\(\overline{V_i}\) contains pertinent variables from unit \(i\). From
+here, we compute the Mahalanobois Distance matrix, \textbf{D}, by
+finding
+\(d(\overline{V_i}, \overline{V_j}) = \sum_{k=1}^m \frac{(v_{ik} - v_{jk})^2}{s_k^2}\)
+where
+\(s_k^2 = \frac{1}{m} \sum_{l=1}^m(v_{lk} - \overline{v_{\cdot k}})\)
+and \(\overline{v_{\cdot k}} = \frac{1}{n} \sum \overline{V_k}.\) I
+DON'T KNOW IF THIS IS HELPFUL OR NOT FEELS OVER-DETAILY TO ME?? Then we
+use the \texttt{nmatch} function in the \texttt{designmatch} \citep{doi}
+package in \texttt{R} \citep{nmatch} to find \(\frac{n}{2}\) pairs if
+\(n\) is even. If \(n\) is odd, the remainder can be randomized to
+treatment or control per the principal investigator. Without loss of
+generality, we assume \(n\) is even for the remainder of this paper and
+note that to include an odd \(n\) either treatment or control groups
+will include one more set of priority variables.
 
-\begin{eqnarray*}
-v^{*}_{ij} = \frac{(v_{ij} - \frac{\sum _{k=1}^{n}v_{ik}}{n})*w_i}{sd(\overline{V_i})} 
- \end{eqnarray*}
-
-where \(sd(\overline{V_i})\) is the standard deviation of
-\(\overline{V_i}.\) We now have
-
-\begin{eqnarray*}
- \overline{V_1^*} & = & (v_{11}^*, v_{12}^*,..., v_{1n}^*)\\
- \overline{V_2^*} & = & (v_{21}^*, v_{22}^*,..., v_{2n}^*)\\
- \vdots & = & \vdots\\    
- \overline{V_m^*} & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*).\\
- \end{eqnarray*}
-
-which we use to compute the Mahalanobois Distance matrix, \textbf{D}.
-From here we use the \texttt{nmatch} function in the
-\texttt{designmatch} \citep{doi} package in \texttt{R} \citep{nmatch}to
-find \(\frac{n}{2}\) pairs if \(n\) is even. If \(n\) is odd, the
-remainder can be randomized to treatment or control per the principal
-investigator. Without loss of generality, we assume \(n\) is even for
-the remainder of this paper and note that to include an odd \(n\) either
-treatment or control groups will include one more set of priority
-variables.
-
-Once the matching is completed and pairs found we return to using the
-raw data, as this will be used to assess the weighting scheme. We now
-have pairs
-\((\overline{V}_{11}, \overline{V}_{12}), (\overline{V}_{21}, \overline{V}_{22}), ..., (\overline{V}_{\frac{n}{2}1}, \overline{V}_{\frac{n}{2}2}).\)
+Once the matching is completed and we have pairs
+\((\overline{C}_{11}, \overline{C}_{12}), (\overline{C}_{21}, \overline{C}_{22}), ..., (\overline{C}_{\frac{n}{2}1}, \overline{C}_{\frac{n}{2}2}).\)
 The first match in each pair will be randomized to either treatment or
-control using the \texttt{rbinom} function in \texttt{R}. Next, we
-subset \(\overline{V}_1, \overline{V}_2, ..., \overline{V}_m\) into
-appropriate randomization subgroups:
+control. Next, we subset
+\(\overline{V}_1, \overline{V}_2, ..., \overline{V}_m\) into appropriate
+randomization subgroups:
 \(\overline{V}_{1T}, \overline{V}_{1C}, \overline{V}_{2T}, \overline{V}_{2C},..., \overline{V}_{\frac{n}{2}T}, \overline{V}_{\frac{n}{2}C}\)
 where \(\overline{V}_{iT} = (v_{i1}^T, v_{i2}^T,..., v_{in}^T),\)
 similarly for \(\overline{V}_{iC}.\) Using these we find
 
 \begin{eqnarray*}
- k_j = | \sum_{i = 1}^{\frac{n}{2}}v_{ij}^T - \sum_{i = 1}^{\frac{n}{2}}v_{ij}^C | 
+ d_i = | \sum_{j = 1}^{\frac{n}{2}}v_{ij}^T - \sum_{j = 1}^{\frac{n}{2}}v_{ij}^C | 
 \end{eqnarray*}
 
 THE ABOVE NEEDS A BETTER ABSOLUTE VALUE SYMBOL. for
@@ -223,13 +220,26 @@ THE ABOVE NEEDS A BETTER ABSOLUTE VALUE SYMBOL. for
 difference in the two arms for the \(j^{th}\) priority variable for each
 of the \(l = 1, 2, ..., N\) re-randomizations. To assist analysis we
 draw a parallel coordinates plot where the \(j^{th}\) axis plots
-\(k_{lj}\) for \(l = 1, 2, ..., N.\) If the principal investigator finds
-the possible differences too large for a priority variable \(j\),
-increasing \(w_j\) and re-running the above will update the matching to
-attain closer matches for this variable and lessen the differences. The
-penality in this process is that closer matches for variable \(j\) are
-likely to imply reduced closeness in another variable, so compromises
-must be made.
+\(k_{lj}\) for \(l = 1, 2, ..., N.\)
+
+If the investigators finds the possible differences too large for a
+priority variable \(j\), we introduce
+\(\overline{S} = (s_{1}, s_{2},..., s_{m})\), which controls the
+strength of matching on that variable, to multiply
+\((\overline{V_1}, \overline{V_2}, ..., \overline{V_m}).\) We have
+
+\begin{eqnarray*}
+ \overline{V_1^*} & = & (v_{11}^*, v_{12}^*,..., v_{1n}^*) \times s_{1}\\
+ \overline{V_2^*} & = & (v_{21}^*, v_{22}^*,..., v_{2n}^*) \times s_{2}\\
+ \vdots & = & \vdots\\    
+ \overline{V_m^*} & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*) \times s_{m}.\\
+ \end{eqnarray*}
+
+and re-run the procedure to update the matching to attain stronger
+matches for the variable \(j\) and lessen the differences. The penality
+in this process is that closer matches for variable \(j\) are likely to
+imply reduced closeness in another variable, so compromises must be
+made.
 
 \subsection{Results}\label{results}
 
@@ -242,12 +252,12 @@ Bloodstream Infection During Routine Chlorhexidine Bathing)
 \citep{SOTrial}. In this non-inferiority trial, the investigators are
 studying whether bathing with chlorhexidine gluconate and swabbing
 iodophor nasal swabs are inferior to bathing with the same and mupirocin
-nasal swabs. REDUCE trial \citep{huang2013targeted} mupirocin nasal
-swabs and bathing with chlorhexidine reduced the MRSA Staphylococcus
-aureus (an antibiotic resistant infection) in Hospital Corporation of
-America intensive care units (ICU). However, physicians are reluctant to
-use mupirocin, an antibiotic, so investigators are swapping it with
-iodophor.
+nasal swabs. In the REDUCE trial \citep{huang2013targeted} mupirocin
+nasal swabs and bathing with chlorhexidine reduced the MRSA
+Staphylococcus aureus (an antibiotic resistant infection) in Hospital
+Corporation of America intensive care units (ICU). However, physicians
+are reluctant to use mupirocin, an antibiotic, so investigators are
+assessing ``swapping''" it with iodophor.
 
 \begin{longtable}[]{@{}lllll@{}}
 \caption{Abbreviations of variables used to randomize}\tabularnewline
@@ -270,6 +280,8 @@ Mup Adherence &\tabularnewline
 CHG Adherence &\tabularnewline
 \bottomrule
 \end{longtable}
+
+A COMMENT WE DIDN'T DISCUSS WAS HERE - DATA FROM EMRS/billing records
 
 Prior to randomization baseline data was collected for 20 months on the
 137 hospitals. With this data, investigators met to prioritize baseline
@@ -299,7 +311,8 @@ above: Patient days, Staphylococcus aureus rate, and MRSA rate.
 
 Prior to randomization, investigators spent time using a web application
 built using the \texttt{Shiny} package in \texttt{R}. The purpose of
-this is to determine which weights give advantageous balance across
+this is to help investigators explore the strength of matching on
+multiple variables to see what gives advantageous balance across
 relevant baseline variables. We recommend deciding on ideal and
 acheivable maximum differences in study arms and using many combinations
 of weights until one is found which ensures randomization is likely to
@@ -314,33 +327,35 @@ initial explorations on the web application, investigators agreed that
 an ideal maximum mean differences in treatment and control arms for
 these variables were: 80 attributable patient days per month, 15\%
 difference in Staphylococcus aureus infection rates, and 15\% difference
-in MRSA rate. The graph on the top left shows no weighting on any of
-these variables, the maximums are not consistently attained on any axis:
-there is a reasonable chance that if randomization occured with this
-weighting all variables would be above the desired maximum mean
-differences in treatment and control arms. To rectify this, nonzero
-weighting must be added. In the top-right graph a weight of 8 has been
-applied to the Staphylococcus auer rate. In this graph, the matching of
-hospitals is strongly skewed so that hospitals with similar
-Staphylococcus auer rates are paired. This results in low mean
-difference between the treatment and control arms in that variable. The
-middle axis is consistently below the maximum value: if randomization
-occured using these weights we are likely to get suitable balance in
-this variable. Unfortunately, there is a penalty. Hospitals with similar
-Staphylococcus auer rates may not have similar attributable patient days
-per month and MRSA rates, which results in increases in these values. In
+in MRSA rate. The graph on the top left shows no strength of matching on
+any of these variables, the maximums are not consistently attained on
+the second and third axis: there is a reasonable chance that if
+randomization occured with this weighting the Staphylococcus aureus and
+MRSA rate would be above the desired maximum mean differences in
+treatment and control arms. To rectify this, nonzero strengths must be
+added. In the top-right graph a strength of 8 has been applied to the
+Staphylococcus auereus rate. In this graph, the matching of hospitals is
+strongly skewed so that hospitals with similar Staphylococcus auereus
+rates are paired. This results in low mean difference between the
+treatment and control arms in that variable. The middle axis is
+consistently below the maximum value: if randomization occured using
+these strenghts we are likely to get suitable balance in this variable.
+Unfortunately, there is a penalty. Hospitals with similar Staphylococcus
+auereus rates do not have similar attributable patient days per month
+and MRSA rates, which results in increases in these values. In
 particular, our investigators felt that the chance of attaining MRSA
-rates above 15\% were too high for this weighting. The bottom plot shows
+rates above 15\% were too high for this strength. The bottom plot shows
 the possible mean balances used in the actual randomization for these
 three variables, the weights for each variable were 1, 4, and 2,
-respectively. In all three graphs, the black line indicates the mean
-value of all points on each axis.
+respectively. In all graphs, the black line indicates the mean value of
+all points on each axis.
 
 Our investigators used this approach with 16 variables. After trying
 many weights this weighting provided the best balance between treatment
-and control arms for the variables of important. When the trial was
-randomized we used this weighting to match hospitals in the study, then
+and control arms for the variables of importance. When the trial was
+randomized we used these strength to match hospitals in the study, then
 randomized the first member of each match to either treatment control.
+The results can be seen in Figure 2.
 
 \begin{center}\includegraphics{Bins_files/figure-latex/FullGraph-1} \end{center}
 
@@ -350,8 +365,9 @@ While the Goldilocks approach to randomizing does not ensure balance in
 the treatment and control arms, it is a tool that provides investigators
 with a method to explore weights that impact matching and balance. We
 encourage investigators that utilize CRTs to use this method prior to
-randomizing to find more balance in treatment and control arms and
-SOMETHING THEORETICAL HERE!!!!
+randomizing to find more balance in treatment and control arms.
+
+GENERALIZE TO MORE THAN TWO ARMS HERE. NOT SURE HOW
 
 Future work in this area includes publishing a \texttt{Shiny} web
 application for investigators to utilise. This application will
