--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -361,6 +361,13 @@ trial was randomized we used these strength to match hospitals in the
 study, then randomized the first member of each match to either
 treatment control. The results can be seen in Figure 2.
 
+One variable in Figure 2, median length of stay, is fixed on one value.
+For this variable, all computed randomisations had the same mean
+difference in median length of stay in the control and treatment arm.
+When randomisation occurs we can be almost certain that we will attain
+this mean difference in median length of stay in the treatment and
+control arms.
+
 \begin{center}\includegraphics{Bins_files/figure-latex/FullGraph-1} \end{center}
 
 \subsection{Discussion}\label{discussion}
